--- a/platzi-market/src/main/resources/application-pdn.properties
+++ b/platzi-market/src/main/resources/application-pdn.properties
@@ -1,1 +1,8 @@
 server.port=80
+
+#DataBase
+spring.datasource.url=jdbc:postgresql://localhost:5432/platzi-market
+spring.datasource.username=postgres
+spring.datasource.password=agustin123
+
+spring.datasource.driver-class-name=org.postgresql.Driver
